--- a/views/table.html
+++ b/views/table.html
@@ -32,7 +32,7 @@
             class="q-table__cell 
             {% if item.options.minibarOptions+2 === loop.index and item.options.minibarOptions != null %}
               q-table-minibar--{{minibar.values[row_loop.index].type}}">
-              <div data-minibar="{{minibar.type}}" data-minibar-type="value" class="q-table-minibar-alignment--{{minibar.values[row_loop.index].type}} q-table__cell q-table__cell--{{cell.type}}">
+              <div data-minibar="{{minibar.values[row_loop.index].type}}" data-minibar-type="value" class="q-table-minibar-alignment--{{minibar.values[row_loop.index].type}} q-table__cell q-table__cell--{{cell.type}}">
               {{ cell.value }}
               </div>
             {% else %}q-table__cell--{{cell.type}}">
@@ -40,8 +40,8 @@
             {% endif %}
             {%- if item.options.minibarOptions+2 === loop.index and item.options.minibarOptions != null %}  
               {% if minibar.values[row_loop.index].type !== "empty" %}
-                <div data-minibar="{{minibar.type}}" data-minibar-type="bar" class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}} q-table-minibar--{{minibar.values[row_loop.index].type}}"  
-                style="width: {{minibar.values[row_loop.index].value / 2 }}%">
+                <div data-minibar="{{minibar.values[row_loop.index].type}}" data-minibar-type="bar" class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}} q-table-minibar--{{minibar.values[row_loop.index].type}}"  
+                style="width: {{minibar.values[row_loop.index].value}}%">
                 </div>
               </div>
               {% endif %}
