--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -150,8 +150,8 @@ tr.q-table-state-visible {
 }
 
 .q-table-minibar--mixed {
-  min-width: 180px;
   background-color:rgba(200, 200, 200, 0.15);
+  min-width: 180px;
   padding-right: 8px !important;
   padding-left: 8px !important;
 }
@@ -167,56 +167,56 @@ tr.q-table-state-visible {
 
 .q-table-minibar-bar--positive {
   background-color: #5e6192;
+  position: relative;
   height: 17px;
   display: inline-block;
-  position: relative;
 }
 
 .q-table-minibar-bar--positive::before {
   content: "";
-  width: 1px;
-  position: absolute;
   border-left: 0.5px solid currentColor;
+  position: absolute;
   height: 19px;
+  width: 1px;
   top: -1px;
 }
 
 .q-table-minibar-bar--negative {
   background-color: #b23c39;
+  position: relative;
   height: 17px;
   float: right;
-  position: relative;
 }
 
 .q-table-minibar-bar--negative::before{
   content: "";
-  width: 1px;
-  position: absolute;
   border-right: 0.5px solid #393855;
+  position: absolute;
+  width: 1px;
   height: 19px;
   top: -1px;
-  left: 100%;
+  right: 0px;
 }
 
 .q-table-minibar-alignment--positive {
-  width: 50%;
   text-align: right;
   float: left;
+  width: 50%;
   padding-right: 4px;
 }
 
 .q-table-minibar-alignment--negative {
-  width: 50%;
   position: relative;
-  left: 50%;
   text-align: left !important;
-  padding-left: 4px;
   float: left;
+  left: 50%;
+  padding-left: 4px;
+  
 }
 
 .q-table-minibar-alignment--empty {
-  width: 100%;
   text-align: center !important;
+  width: 100%;
 }
 
 .q-table-minibar-hidden {
