--- a/views/table.html
+++ b/views/table.html
@@ -23,69 +23,7 @@
       {% set row_loop = loop %}
       <tr {% if numberOfRowsToHide and loop.index >= (item.data.length - numberOfRowsToHide) %}style="display: none;"{% endif %}>
         {%- for cell in row %}
-          {%- if minibar.type==="mixed"%}
-            <td 
-            {% if item.options.hideTableHeader !== true %}
-              data-label="{{ item.data[0][loop.index0].value }}" 
-              data-minibar="{{minibar.type}}"
-            {% endif %} 
-            class="q-table__cell 
-            {% if item.options.minibarOptions+2 === loop.index and item.options.minibarOptions != null and not initWithCardLayout %}
-              q-table-minibar--{{minibar.values[row_loop.index].type}}">
-              <div data-minibar="{{minibar.values[row_loop.index].type}}" data-minibar-type="value" class="q-table-minibar-alignment--{{minibar.values[row_loop.index].type}} q-table__cell q-table__cell--{{cell.type}}">
-              {{ cell.value }}
-              </div>
-            {% else %}q-table__cell--{{cell.type}}">
-              {{ cell.value }}
-            {% endif %}
-            {%- if item.options.minibarOptions+2 === loop.index and item.options.minibarOptions != null and not initWithCardLayout %}
-              {% if minibar.values[row_loop.index].type !== "empty" %}
-                <div data-minibar="{{minibar.values[row_loop.index].type}}" data-minibar-type="bar" class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}} q-table-minibar--{{minibar.values[row_loop.index].type}}"  
-                style="width: {{minibar.values[row_loop.index].value}}%">
-                </div>
-              </div>
-              {% endif %}
-              </td>
-            {%- endif %} 
-          {% else %}
-            {%- if minibar.type==="positive" %}
-              <td 
-                {% if item.options.hideTableHeader !== true %}data-label="{{ item.data[0][loop.index0].value }}" {% endif %} 
-                class="q-table__cell q-table__cell--{{ cell.type }}
-                {%- if item.options.minibarOptions+2 === loop.index and item.options.minibarOptions != null and not initWithCardLayout %}
-                q-table-minibar-cell--value" data-minibar-type="value" data-minibar="{{minibar.type}}" style="padding-left: 12px;
-                {% endif %}">
-                  {{ cell.value }} 
-              </td>
-              {%- if item.options.minibarOptions+2 === loop.index and item.options.minibarOptions != null and not initWithCardLayout %}
-                <td data-minibar="{{minibar.type}}" class="q-table-minibar-cell" style="padding-right: 12px;">
-                  <div data-minibar-type="bar" class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}}"  
-                  {% if minibar.values[row_loop.index].type !== "empty" %}
-                  style="width: {{minibar.values[row_loop.index].value}}%"
-                  {% endif %}>
-                  </div>
-                </td> 
-              {%- endif %} 
-            {% else %} 
-                {%- if item.options.minibarOptions+2 === loop.index and item.options.minibarOptions != null and not initWithCardLayout %}
-                <td class="q-table-minibar-cell" data-minibar="{{minibar.type}}" style="padding-left: 12px; padding-right: 0px !important;">
-                  <div data-minibar-type="bar" class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}}"  
-                  {% if minibar.values[row_loop.index].type !== "empty" %}
-                  style="width: {{minibar.values[row_loop.index].value}}%"
-                  {% endif %}>
-                  </div>
-                </td> 
-              {%- endif %} 
-              <td 
-              {% if item.options.hideTableHeader !== true %}data-label="{{ item.data[0][loop.index0].value }}" {% endif %} 
-              class="q-table__cell q-table__cell--{{ cell.type }}
-              {%- if item.options.minibarOptions+2 === loop.index and item.options.minibarOptions != null and not initWithCardLayout %}
-              q-table-minibar-cell--value" data-minibar="{{minibar.type}}" data-minibar-type="value" style="padding-right: 12px;
-              {% endif %}">
-                {{ cell.value }} 
-              </td>
-            {% endif %}
-          {% endif %}
+          {% include "./minibar.html" %}
         {%- endfor %}
       </tr>
       {%- endfor %}
