--- a/views/minibar.html
+++ b/views/minibar.html
@@ -5,7 +5,7 @@
     data-minibar="{{minibar.type}}"
   {% endif %} 
   class="q-table__cell 
-  {% if item.options.minibarOptions+2 === loop.index and item.options.minibarOptions != null and not initWithCardLayout %}
+  {% if item.options.minibar.selectedColumn+1 === loop.index and item.options.minibar.selectedColumn != null and not initWithCardLayout %}
     q-table-minibar--{{minibar.values[row_loop.index].type}}">
     <div data-minibar="{{minibar.values[row_loop.index].type}}" data-minibar-type="value" class="q-table-minibar-alignment--{{minibar.values[row_loop.index].type}} q-table__cell q-table__cell--{{cell.type}}">
     {{ cell.value }}
@@ -13,13 +13,13 @@
   {% else %}q-table__cell--{{cell.type}}">
     {{ cell.value }}
   {% endif %}
-  {%- if item.options.minibarOptions+2 === loop.index and item.options.minibarOptions != null and not initWithCardLayout %}
+  {%- if item.options.minibar.selectedColumn+1 === loop.index and item.options.minibar.selectedColumn != null and not initWithCardLayout %}
     {% if minibar.values[row_loop.index].type !== "empty" %}
       <div data-minibar="{{minibar.values[row_loop.index].type}}" data-minibar-type="bar" class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}} q-table-minibar--{{minibar.values[row_loop.index].type}}
       {% if minibar.values[row_loop.index].type === "positive" %}
-        {{item.options.colorOverwrite.colorPositive}}
+        {{item.options.minibar.barColor.positive}}
       {% else %}
-        {{item.options.colorOverwrite.colorNegative}}
+        {{item.options.minibar.barColor.negative}}
       {% endif %}"  
       style="width: {{minibar.values[row_loop.index].value}}%">
       </div>
@@ -31,18 +31,18 @@
     <td 
       {% if item.options.hideTableHeader !== true %}data-label="{{ item.data[0][loop.index0].value }}" {% endif %} 
       class="q-table__cell q-table__cell--{{ cell.type }}
-      {%- if item.options.minibarOptions+2 === loop.index and item.options.minibarOptions != null and not initWithCardLayout %}
+      {%- if item.options.minibar.selectedColumn+1 === loop.index and item.options.minibar.selectedColumn != null and not initWithCardLayout %}
       q-table-minibar-cell--value" data-minibar-type="value" data-minibar="{{minibar.type}}" style="padding-left: 12px;
       {% endif %}">
-        {{ cell.value }} 
+        {{ cell.value }}
     </td>
-    {%- if item.options.minibarOptions+2 === loop.index and item.options.minibarOptions != null and not initWithCardLayout %}
+    {%- if item.options.minibar.selectedColumn+1 === loop.index and item.options.minibar.selectedColumn != null and not initWithCardLayout %}
       <td data-minibar="{{minibar.type}}" class="q-table-minibar-cell" style="padding-right: 12px;">
         <div data-minibar-type="bar" class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}}
         {% if minibar.values[row_loop.index].type === "positive" %}
-          {{item.options.colorOverwrite.colorPositive}}
+          {{item.options.minibar.barColor.positive}}
         {% else %}
-          {{item.options.colorOverwrite.colorNegative}}
+          {{item.options.minibar.barColor.negative}}
         {% endif %}"  
         {% if minibar.values[row_loop.index].type !== "empty" %}
         style="width: {{minibar.values[row_loop.index].value}}%"
@@ -51,13 +51,13 @@
       </td> 
     {%- endif %} 
   {% else %} 
-      {%- if item.options.minibarOptions+2 === loop.index and item.options.minibarOptions != null and not initWithCardLayout %}
+      {%- if item.options.minibar.selectedColumn+1 === loop.index and item.options.minibar.selectedColumn != null and not initWithCardLayout %}
       <td class="q-table-minibar-cell" data-minibar="{{minibar.type}}" style="padding-left: 12px; padding-right: 0px !important;">
         <div data-minibar-type="bar" class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}}
         {% if minibar.values[row_loop.index].type === "positive" %}
-          {{item.options.colorOverwrite.colorPositive}}
+          {{item.options.minibar.barColor.positive}}
         {% else %}
-          {{item.options.colorOverwrite.colorNegative}}
+          {{item.options.minibar.barColor.negative}}
         {% endif %}"  
         {% if minibar.values[row_loop.index].type !== "empty" %}
         style="width: {{minibar.values[row_loop.index].value}}%"
@@ -68,10 +68,10 @@
     <td 
     {% if item.options.hideTableHeader !== true %}data-label="{{ item.data[0][loop.index0].value }}" {% endif %} 
     class="q-table__cell q-table__cell--{{ cell.type }}
-    {%- if item.options.minibarOptions+2 === loop.index and item.options.minibarOptions != null and not initWithCardLayout %}
+    {%- if item.options.minibar.selectedColumn+1 === loop.index and item.options.minibar.selectedColumn != null and not initWithCardLayout %}
     q-table-minibar-cell--value" data-minibar="{{minibar.type}}" data-minibar-type="value" style="padding-right: 12px;
     {% endif %}">
-      {{ cell.value }} 
+      {{ cell.value }}
     </td>
   {% endif %}
 {% endif %}
