--- a/views/minibar.html
+++ b/views/minibar.html
@@ -15,18 +15,18 @@
   {% endif %}
   {%- if item.options.minibar.selectedColumn+1 === loop.index and item.options.minibar.selectedColumn != null and not initWithCardLayout %}
     {% if minibar.values[row_loop.index].type !== "empty" %}
-      <div data-minibar="{{minibar.values[row_loop.index].type}}" data-minibar-type="bar" class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}} q-table-minibar--{{minibar.values[row_loop.index].type}}
-      {% if minibar.values[row_loop.index].type === "positive" %}
+      <div data-minibar="{{minibar.values[row_loop.index].type}}" data-minibar-type="bar" class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}} q-table-minibar--{{minibar.values[row_loop.index].type}} 
+      {% if minibar.values[row_loop.index].type === "positive" -%}
         {{item.options.minibar.barColor.positive.className}}
-      {% else %}
+      {%- else -%}
         {{item.options.minibar.barColor.negative.className}}
-      {% endif %}"  
-      style="width: {{minibar.values[row_loop.index].value}}%; background-color:
-      {% if minibar.values[row_loop.index].type === "positive" %}
-        {{item.options.minibar.barColor.positive.colorCode}}
-      {% else %}
-        {{item.options.minibar.barColor.negative.colorCode}}
-      {% endif %}">
+      {%- endif -%}"  
+      style="width: {{minibar.values[row_loop.index].value}}%;
+      {%- if minibar.values[row_loop.index].type === "positive" -%}
+        background-color: {{item.options.minibar.barColor.positive.colorCode}};
+      {%- else -%}
+        background-color: {{item.options.minibar.barColor.negative.colorCode}};
+      {%- endif -%}">
       </div>
     {% endif %}
     </td>
@@ -44,18 +44,18 @@
     {%- if item.options.minibar.selectedColumn+1 === loop.index and item.options.minibar.selectedColumn != null and not initWithCardLayout %}
       <td data-minibar="{{minibar.type}}" class="q-table-minibar-cell" style="padding-right: 12px;">
         <div data-minibar-type="bar" class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}}
-        {% if minibar.values[row_loop.index].type === "positive" %}
+        {% if minibar.values[row_loop.index].type === "positive" -%}
           {{item.options.minibar.barColor.positive.className}}
-        {% else %}
+        {%- else -%}
           {{item.options.minibar.barColor.negative.className}}
-        {% endif %}"
+        {%- endif -%}"
         {% if minibar.values[row_loop.index].type !== "empty" %}
-        style="width: {{minibar.values[row_loop.index].value}}%; background-color:
-          {% if minibar.values[row_loop.index].type === "positive" %}
-            {{item.options.minibar.barColor.positive.colorCode}}
-          {% else %}
-            {{item.options.minibar.barColor.negative.colorCode}}
-          {% endif %}"
+        style="width: {{minibar.values[row_loop.index].value}}%;
+          {%- if minibar.values[row_loop.index].type === "positive" -%}
+            background-color: {{item.options.minibar.barColor.positive.colorCode}};
+          {%- else -%}
+            background-color: {{item.options.minibar.barColor.negative.colorCode}};
+          {%- endif -%}"
         {% endif %}>
         </div>
       </td> 
@@ -64,18 +64,18 @@
       {%- if item.options.minibar.selectedColumn+1 === loop.index and item.options.minibar.selectedColumn != null and not initWithCardLayout %}
       <td class="q-table-minibar-cell" data-minibar="{{minibar.type}}" style="padding-left: 12px; padding-right: 0px !important;">
         <div data-minibar-type="bar" class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}}
-        {% if minibar.values[row_loop.index].type === "positive" %}
+        {%if minibar.values[row_loop.index].type === "positive" -%}
           {{item.options.minibar.barColor.positive.className}}
-        {% else %}
+        {%- else -%}
           {{item.options.minibar.barColor.negative.className}}
-        {% endif %}"  
+        {%- endif -%}"  
         {% if minibar.values[row_loop.index].type !== "empty" %}
-        style="width: {{minibar.values[row_loop.index].value}}%; background-color:
-          {% if minibar.values[row_loop.index].type === "positive" %}
-            {{item.options.minibar.barColor.positive.colorCode}}
-          {% else %}
-            {{item.options.minibar.barColor.negative.colorCode}}
-          {% endif %}"
+        style="width: {{minibar.values[row_loop.index].value}}%;
+          {%- if minibar.values[row_loop.index].type === "positive" -%}
+            background-color: {{item.options.minibar.barColor.positive.colorCode}};
+          {%- else -%}
+            background-color: {{item.options.minibar.barColor.negative.colorCode}};
+          {%- endif -%}"
         {% endif %}>
         </div>
       </td> 
