--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -224,9 +224,15 @@ tr.q-table-state-visible {
   display: none !important;
 }
 
-.q-table-footnote {
+.q-table-annotation {
   position: absolute;
+  color: #6e6e7e;
   margin-left: 1.5px;
-  margin-top: -2.5px;
+  margin-top: -5.5px;
+  font-size: xx-small;
+}
+
+.q-table-footnote {
+  vertical-align: super;
   font-size: xx-small;
 }
