--- a/views/footer.html
+++ b/views/footer.html
@@ -26,7 +26,7 @@
   {%- if item.metaData.cells.length > 0 %}
     {%- for cell in item.metaData.cells -%}
       {%- if cell.data.footnote -%}
-      <span>{{loop.index}}*</span> - <span>{{cell.data.footnote}}</span>
+      <span class="q-table-footnote">{{loop.index}}</span> {{cell.data.footnote}}
       {% if not loop.last %}<br />{% endif %}
       {%- endif -%}
     {%- endfor -%}
