display annotation of footnote in header

--- a/views/table.html
+++ b/views/table.html
@@ -14,6 +14,7 @@
       id="q-table-minibar-header"
       {% endif %}>
           {{ head.value }}
+          {%- if head.footnote %}<span class="q-table-annotation">{{ head.footnote }}</span>{%- endif %}
       </th> 
       {%- endfor %}
     </thead>
