add a larger padding to cell if it contains footnote and the following column contains minibars

--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -236,3 +236,7 @@ tr.q-table-state-visible {
   vertical-align: super;
   font-size: xx-small;
 }
+
+.q-table-col-footnotes {
+  padding-right: 10px!important;
+}
