put footnote in footer in a seperate span

--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -232,7 +232,7 @@ tr.q-table-state-visible {
   font-size: xx-small;
 }
 
-.q-table-footnote {
+.q-table-footnote-index {
   vertical-align: super;
   font-size: xx-small;
 }
