--- a/views/footer.html
+++ b/views/footer.html
@@ -26,8 +26,9 @@
   {%- if metaData.length > 0 %}
     {%- for cell in metaData -%}
       {%- if cell.data.footnote -%}
-      <span class="q-table-footnote">{{loop.index}}</span> {{cell.data.footnote}}
-      {% if not loop.last %}<br />{% endif %}
+      <div class="q-table-footer-footnote">
+        <span class="q-table-footnote-index">{{loop.index}}</span><span class="q-table-footnote-text">{{cell.data.footnote}}</span>
+      </div>
       {%- endif -%}
     {%- endfor -%}
   {%- endif %}
