set size of annotation indepednet to font-family

--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -229,12 +229,12 @@ tr.q-table-state-visible {
   color: #6e6e7e;
   margin-left: 1px;
   margin-top: -5.5px;
-  font-size: xx-small;
+  font-size: 9px;
 }
 
 .q-table-footnote-index {
   vertical-align: super;
-  font-size: xx-small;
+  font-size: 9px;
 }
 
 .q-table-col-footnotes-single {
